java/java-tests/testData/codeInsight/daemonCodeAnalyzer/highlightSeverity/ErrorLikeUnusedSymbol.java
class Test {
  public static void main(String[] args) {
    int <error descr="Variable 'k' is never used">k</error> = 0;
  }
}